# numerical_methods_cpp

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
include/: interp.hpp  q234.hpp
src/: q2.cpp  q3.cpp  q4.cpp  rk4.cpp
